# livebook

./: .gitignore  CLAUDE_SKILL.md  DESIGN.md  README.md  play.py  pyproject.toml
.github/workflows/: test.yml
livebook/: __init__.py  _proto.py  _run.py  connection.py  models.py  notebook.py
tests/integration/: conftest.py  test_connection.py  test_notebook.py
tests/unit/: test_models.py  test_proto.py
