[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livebook"
version = "0.1.2"
description = "Python library for AI agents to operate Jupyter notebooks programmatically"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "websocket-client",
    "nbformat",
]

[project.scripts]
livebook-run = "livebook._run:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter-server>=2.17.0",
    "pytest>=9.0.3",
]
